--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
   "short_name": "FinReport",
   "description": "An interactive weekly dashboard for portfolio, economy, and bond data.",
   "start_url": ".",
+  "scope": ".",
   "display": "standalone",
   "background_color": "#f8f7f4",
   "theme_color": "#475569",
@@ -10,12 +11,20 @@
     {
       "src": "icons/icon-192x192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "any"
     },
     {
       "src": "icons/icon-512x512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "any"
+    },
+    {
+      "src": "icons/icon-512x512.png",
+      "type": "image/png",
+      "sizes": "512x512",
+      "purpose": "maskable"
     }
   ]
 }
